--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/home.css" />
-  </head>
-  <body>
-    <header class="navbar">
-      <h2>Himanshu</h2>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-        <button onclick="toggleTheme()">🌙</button>
-      </nav>
-    </header>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Himanshu Antal | Portfolio</title>
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/home.css">
+</head>
+<body>
 
-    <div class="loader"></div>
+<nav>
+  <h2>Himanshu Antal</h2>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+  </div>
+</nav>
 
-    <section class="hero">
-      <h1>Hello, I'm Himanshu</h1>
-      <p>B.Tech CSE Student</p>
-    </section>
+<section class="hero">
+  <h1>Hi, I'm Himanshu Antal</h1>
+  <p>B.Tech CSE Student | C++ | DSA | Web Development</p>
+  <a href="projects.html" class="btn">View Projects</a>
+</section>
 
-    <script src="js/theme.js"></script>
-  </body>
+<footer>
+  © 2026 Himanshu Antal
+</footer>
+
+</body>
 </html>
