--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>About | Himanshu</title>
   <link rel="stylesheet" href="css/common.css">
@@ -14,6 +14,7 @@
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
+    <span class="toggle-btn">🌙</span>
   </div>
 </nav>
 
@@ -21,10 +22,21 @@
   <img src="images/profile.jpg" alt="profile">
   <div>
     <h1>About Me</h1>
-    <p>I am Himanshu Antal, a B.Tech CSE student passionate about C++, DSA and Web Development. I build efficient code and clean UI designs.</p>
+    <p>
+      I'm Himanshu Antal, a B.Tech CSE student (Batch 2027). 
+      I love solving DSA problems in C++ and building responsive web interfaces.
+    </p>
+
+    <h3>Education</h3>
+    <p>B.Tech in Computer Science Engineering</p>
+
+    <h3>Interests</h3>
+    <p>Competitive Programming • UI/UX • Open Source</p>
   </div>
 </section>
 
 <footer>© 2026 Himanshu Antal</footer>
+
+<script src="js/theme.js"></script>
 </body>
 </html>
