--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Contact | Himanshu</title>
   <link rel="stylesheet" href="css/common.css">
@@ -14,19 +14,24 @@
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
+    <span class="toggle-btn">🌙</span>
   </div>
 </nav>
 
 <section class="contact">
-  <h1>Contact Me</h1>
+  <h1>Let's Connect</h1>
+  <p>Feel free to reach out for collaborations or internship opportunities.</p>
+
   <form>
-    <input type="text" placeholder="Name" required>
-    <input type="email" placeholder="Email" required>
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
     <textarea placeholder="Message"></textarea>
-    <button type="submit">Send</button>
+    <button type="submit">Send Message</button>
   </form>
 </section>
 
 <footer>© 2026 Himanshu Antal</footer>
+
+<script src="js/theme.js"></script>
 </body>
 </html>
