--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Himanshu Antal | Portfolio</title>
   <link rel="stylesheet" href="css/common.css">
@@ -14,18 +14,33 @@
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
+    <span class="toggle-btn">🌙</span>
   </div>
 </nav>
 
 <section class="hero">
   <h1>Hi, I'm Himanshu Antal</h1>
   <p>B.Tech CSE Student | C++ | DSA | Web Development</p>
-  <a href="projects.html" class="btn">View Projects</a>
+  <a href="projects.html" class="btn">View My Work</a>
 </section>
 
-<footer>
-  © 2026 Himanshu Antal
-</footer>
+<section class="stats">
+  <div>
+    <h2>150+</h2>
+    <p>DSA Problems Solved</p>
+  </div>
+  <div>
+    <h2>10+</h2>
+    <p>Mini Projects Built</p>
+  </div>
+  <div>
+    <h2>Open</h2>
+    <p>To Internships</p>
+  </div>
+</section>
 
+<footer>© 2026 Himanshu Antal</footer>
+
+<script src="js/theme.js"></script>
 </body>
 </html>
