--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Projects | Himanshu</title>
   <link rel="stylesheet" href="css/common.css">
@@ -14,23 +14,32 @@
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
+    <span class="toggle-btn">🌙</span>
   </div>
 </nav>
 
 <section class="projects">
   <div class="card">
     <h3>Task Management System</h3>
-    <p>C++ based mini project for task tracking.</p>
+    <p>C++ based project for managing daily tasks efficiently.</p>
     <a href="#">GitHub Link</a>
   </div>
 
   <div class="card">
     <h3>Portfolio Website</h3>
-    <p>Responsive portfolio using HTML & CSS.</p>
+    <p>Responsive portfolio using HTML, CSS, JavaScript.</p>
+    <a href="#">GitHub Link</a>
+  </div>
+
+  <div class="card">
+    <h3>DSA Practice Repository</h3>
+    <p>150+ problems solved on LeetCode & GFG.</p>
     <a href="#">GitHub Link</a>
   </div>
 </section>
 
 <footer>© 2026 Himanshu Antal</footer>
+
+<script src="js/theme.js"></script>
 </body>
 </html>
