adding more styling

--- a/about.html
+++ b/about.html
@@ -18,25 +18,30 @@
   </div>
 </nav>
 
-<section class="about">
-  <img src="images/profile.jpg" alt="profile">
-  <div>
-    <h1>About Me</h1>
-    <p>
-      I'm Himanshu Antal, a B.Tech CSE student (Batch 2027). 
-      I love solving DSA problems in C++ and building responsive web interfaces.
-    </p>
+<section class="about-section">
+  <h1 class="section-title">About <span>Me</span></h1>
 
-    <h3>Education</h3>
-    <p>B.Tech in Computer Science Engineering</p>
+  <div class="about-container">
+    <img src="images/profile.jpg" alt="profile">
 
-    <h3>Interests</h3>
-    <p>Competitive Programming • UI/UX • Open Source</p>
+    <div class="about-text">
+      <h2>B.Tech CSE Student</h2>
+      <p>
+        I’m Himanshu Antal (Batch 2027), passionate about Data Structures, 
+        Algorithms and Web Development. I enjoy solving real-world problems 
+        and building clean, responsive user interfaces.
+      </p>
+
+      <div class="about-cards">
+        <div class="mini-card">C++ & DSA</div>
+        <div class="mini-card">Web Development</div>
+        <div class="mini-card">Git & GitHub</div>
+      </div>
+    </div>
   </div>
 </section>
 
 <footer>© 2026 Himanshu Antal</footer>
-
 <script src="js/theme.js"></script>
 </body>
 </html>
