--- a/index.html
+++ b/index.html
@@ -18,24 +18,45 @@
   </div>
 </nav>
 
+<!-- HERO SECTION -->
 <section class="hero">
-  <h1>Hi, I'm Himanshu Antal</h1>
-  <p>B.Tech CSE Student | C++ | DSA | Web Development</p>
-  <a href="projects.html" class="btn">View My Work</a>
+
+  <div class="hero-left">
+    <h1>
+      Hi, I'm <span>Himanshu Antal</span>
+    </h1>
+    <p>
+      B.Tech CSE Student • C++ • DSA • Web Development  
+      Passionate about building clean UI & efficient code.
+    </p>
+
+    <div class="hero-buttons">
+      <a href="projects.html" class="btn primary-btn">View Projects</a>
+      <a href="contact.html" class="btn outline-btn">Hire Me</a>
+    </div>
+  </div>
+
+  <div class="hero-right">
+    <img src="images/profile.jpg" alt="profile">
+  </div>
+
 </section>
 
+<!-- STATS -->
 <section class="stats">
-  <div>
+  <div class="stat-card">
     <h2>150+</h2>
     <p>DSA Problems Solved</p>
   </div>
-  <div>
+
+  <div class="stat-card">
     <h2>10+</h2>
-    <p>Mini Projects Built</p>
+    <p>Projects Completed</p>
   </div>
-  <div>
+
+  <div class="stat-card">
     <h2>Open</h2>
-    <p>To Internships</p>
+    <p>For Internships</p>
   </div>
 </section>
 
