--- a/projects.html
+++ b/projects.html
@@ -18,28 +18,33 @@
   </div>
 </nav>
 
-<section class="projects">
-  <div class="card">
-    <h3>Task Management System</h3>
-    <p>C++ based project for managing daily tasks efficiently.</p>
-    <a href="#">GitHub Link</a>
-  </div>
+<section class="projects-section">
+  <h1 class="section-title">My <span>Projects</span></h1>
 
-  <div class="card">
-    <h3>Portfolio Website</h3>
-    <p>Responsive portfolio using HTML, CSS, JavaScript.</p>
-    <a href="#">GitHub Link</a>
-  </div>
+  <div class="projects-grid">
 
-  <div class="card">
-    <h3>DSA Practice Repository</h3>
-    <p>150+ problems solved on LeetCode & GFG.</p>
-    <a href="#">GitHub Link</a>
+    <div class="project-card">
+      <h3>Task Management System</h3>
+      <p>C++ based system for managing daily tasks efficiently.</p>
+      <a href="#">GitHub →</a>
+    </div>
+
+    <div class="project-card">
+      <h3>Portfolio Website</h3>
+      <p>Responsive portfolio using HTML, CSS & JavaScript.</p>
+      <a href="#">GitHub →</a>
+    </div>
+
+    <div class="project-card">
+      <h3>DSA Practice Repository</h3>
+      <p>150+ solved problems on LeetCode & GFG.</p>
+      <a href="#">GitHub →</a>
+    </div>
+
   </div>
 </section>
 
 <footer>© 2026 Himanshu Antal</footer>
-
 <script src="js/theme.js"></script>
 </body>
 </html>
