--- a/about.html
+++ b/about.html
@@ -25,17 +25,25 @@
     <img src="images/profile.jpg" alt="profile">
 
     <div class="about-text">
-      <h2>B.Tech CSE Student</h2>
+      <h2>B.Tech CSE Student — Batch 2027</h2>
       <p>
-        I’m Himanshu Antal (Batch 2027), passionate about Data Structures, 
-        Algorithms and Web Development. I enjoy solving real-world problems 
-        and building clean, responsive user interfaces.
+        I’m <strong>Himanshu Antal</strong>, a Computer Science student passionate about 
+        building technology-driven solutions that solve real-world problems.
+        I enjoy combining strong problem-solving skills in <strong>C++ & DSA</strong> 
+        with creative <strong>Web Development</strong> to build clean and user-friendly applications.
+      </p>
+
+      <p>
+        I actively practice Data Structures and Algorithms, work on meaningful projects, 
+        and continuously explore how technology can improve health, environment, and daily life.
+        My goal is to become a skilled software engineer contributing to impactful products.
       </p>
 
       <div class="about-cards">
         <div class="mini-card">C++ & DSA</div>
         <div class="mini-card">Web Development</div>
-        <div class="mini-card">Git & GitHub</div>
+        <div class="mini-card">Problem Solving</div>
+        <div class="mini-card">Project Building</div>
       </div>
     </div>
   </div>
