--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="hero-right">
-    <img src="images/profile.jpg" alt="profile">
+    <img src="images/profile.jpeg" alt="profile">
   </div>
 
 </section>
