--- a/projects.html
+++ b/projects.html
@@ -23,22 +23,58 @@
 
   <div class="projects-grid">
 
+    <!-- PROJECT 1 -->
     <div class="project-card">
-      <h3>Task Management System</h3>
-      <p>C++ based system for managing daily tasks efficiently.</p>
-      <a href="#">GitHub →</a>
+      <div class="project-img">
+        <img src="images/swasth.png" alt="Swasth_AI">
+      </div>
+      <div class="project-content">
+        <h3>Swasth_AI</h3>
+        <p>
+          AI-based health assistant that suggests balanced diet plans 
+          and precautionary medicine tips for healthy living.
+        </p>
+        <p><strong>Tech:</strong>  React,Node,Firebase, Open-Ai</p>
+        <a href="http://github.com/himanshuantal5640/Swasth_AI" target="_blank">
+          GitHub →
+        </a>
+      </div>
     </div>
 
+    <!-- PROJECT 2 -->
     <div class="project-card">
-      <h3>Portfolio Website</h3>
-      <p>Responsive portfolio using HTML, CSS & JavaScript.</p>
-      <a href="#">GitHub →</a>
+      <div class="project-img">
+        <img src="images/swadeshi.png" alt="EcoVision">
+      </div>
+      <div class="project-content">
+        <h3>EcoVision</h3>
+        <p>
+          A green-tech platform that provides waste-material business ideas 
+          and step-by-step waste decomposition guidance.
+        </p>
+        <p><strong>Tech:</strong> React,Node,Firebase, Open-Ai</p>
+        <a href="http://github.com/himanshuantal5640/Swadeshi-Waste-AI" target="_blank">
+          GitHub →
+        </a>
+      </div>
     </div>
 
+    <!-- PROJECT 3 -->
     <div class="project-card">
-      <h3>DSA Practice Repository</h3>
-      <p>150+ solved problems on LeetCode & GFG.</p>
-      <a href="#">GitHub →</a>
+      <div class="project-img">
+        <img src="images/DSA.png" alt="DSA Practice Repository">
+      </div>
+      <div class="project-content">
+        <h3>DSA Practice Repository</h3>
+        <p>
+          150+ solved Data Structures & Algorithms problems 
+          focused on interview preparation.
+        </p>
+        <p><strong>Tech:</strong> C++</p>
+        <a href="http://github.com/himanshuantal5640/LeetCodePractice" target="_blank">
+          GitHub →
+        </a>
+      </div>
     </div>
 
   </div>
