--- a/about.html
+++ b/about.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>About | Himanshu</title>
+  <title>About | Himanshu Antal</title>
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="css/footer.css">
+
 </head>
 <body>
 
@@ -18,38 +21,69 @@
   </div>
 </nav>
 
-<section class="about-section">
-  <h1 class="section-title">About <span>Me</span></h1>
+<!-- ABOUT INTRO -->
+<section class="about-hero">
+  <div class="about-img">
+    <img src="images/profile.jpeg" alt="profile">
+  </div>
 
-  <div class="about-container">
-    <img src="images/profile.jpg" alt="profile">
-
-    <div class="about-text">
-      <h2>B.Tech CSE Student — Batch 2027</h2>
-      <p>
-        I’m <strong>Himanshu Antal</strong>, a Computer Science student passionate about 
-        building technology-driven solutions that solve real-world problems.
-        I enjoy combining strong problem-solving skills in <strong>C++ & DSA</strong> 
-        with creative <strong>Web Development</strong> to build clean and user-friendly applications.
-      </p>
-
-      <p>
-        I actively practice Data Structures and Algorithms, work on meaningful projects, 
-        and continuously explore how technology can improve health, environment, and daily life.
-        My goal is to become a skilled software engineer contributing to impactful products.
-      </p>
-
-      <div class="about-cards">
-        <div class="mini-card">C++ & DSA</div>
-        <div class="mini-card">Web Development</div>
-        <div class="mini-card">Problem Solving</div>
-        <div class="mini-card">Project Building</div>
-      </div>
-    </div>
+  <div class="about-content">
+    <h1>Hello! I'm <span>Himanshu Antal</span></h1>
+    <p>
+      I’m a <strong>B.Tech Computer Science student (Batch 2027)</strong> with a strong
+      interest in building efficient software and modern web applications.
+    </p>
+    <p>
+      My journey started with <strong>C & C++</strong> and problem-solving, and gradually
+      expanded into <strong>full-stack development</strong>. I enjoy writing clean code,
+      learning new technologies, and turning ideas into real products.
+    </p>
+    <p>
+      When I’m not coding, I practice DSA, explore system design concepts,
+      or work on projects that improve real-world experiences.
+    </p>
   </div>
 </section>
+<!-- SKILLS -->
+<section class="skills">
+  <h1 class="section-title">Technical <span>Skills</span></h1>
 
-<footer>© 2026 Himanshu Antal</footer>
+  <div class="skill-bar">
+    <span>C / C++</span>
+    <div><p style="width:90%"></p></div>
+  </div>
+
+  <div class="skill-bar">
+    <span>Java</span>
+    <div><p style="width:75%"></p></div>
+  </div>
+
+  <div class="skill-bar">
+    <span>HTML & CSS</span>
+    <div><p style="width:85%"></p></div>
+  </div>
+
+  <div class="skill-bar">
+    <span>JavaScript</span>
+    <div><p style="width:80%"></p></div>
+  </div>
+
+  <div class="skill-bar">
+    <span>MERN Stack</span>
+    <div><p style="width:80%"></p></div>
+  </div>
+
+  <div class="skill-bar">
+    <span>Git & GitHub</span>
+    <div><p style="width:85%"></p></div>
+  </div>
+
+</section>
+
+<div id="footer"></div>
+
 <script src="js/theme.js"></script>
+<script src="js/footer.js"></script>
+
 </body>
 </html>
