--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Himanshu Antal | Portfolio</title>
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+ <link rel="stylesheet" href="css/footer.css">
+
 </head>
 <body>
 
@@ -59,8 +62,24 @@
     <p>For Internships</p>
   </div>
 </section>
+<!-- SKILLS SECTION -->
+<section class="skills-section">
+  <h1 class="section-title">My <span>Skills</span></h1>
 
-<footer>© 2026 Himanshu Antal</footer>
+  <div class="skills-grid">
+    <div class="skill-card">C++</div>
+    <div class="skill-card">C</div>
+    <div class="skill-card">Java</div>
+    <div class="skill-card">MERN Stack</div>
+    <div class="skill-card">Git</div>
+    <div class="skill-card">GitHub</div>
+  </div>
+</section>
+
+
+<div id="footer"></div>
+
+<script src="js/footer.js"></script>
 
 <script src="js/theme.js"></script>
 </body>
