--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,9 @@
   <title>Projects | Himanshu</title>
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/projects.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="css/footer.css">
+
 </head>
 <body>
 
@@ -80,7 +83,9 @@
   </div>
 </section>
 
-<footer>© 2026 Himanshu Antal</footer>
+<div id="footer"></div>
+<script src="js/footer.js"></script>
+
 <script src="js/theme.js"></script>
 </body>
 </html>
